# rustcore

./: .gitignore  AGENTS.md  CONTINUOUS_TESTING_GUIDE.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  Makefile  README.md  deploy_to_ec2.sh
.cargo/: config.toml
.github/workflows/: test.yml
bootproto/: Cargo.toml
bootproto/src/: lib.rs
docs/: aws_s3_api_requirements.md  functional_testing_capabilities.md  qemu_test_results.md  qemu_testing_guide.md  testing_deployment.md
filesystem/: Cargo.toml
filesystem/src/: catalog.rs  index.rs  journal.rs  lib.rs
ipc/: Cargo.toml
ipc/src/: channel.rs  lib.rs
kernel/: Cargo.toml
kernel/src/: boot.rs  ipc_bridge.rs  lib.rs  memory.rs  scheduler.rs  sync.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: boot.S  mod.rs
kernel/tests/: boot_smoke.rs
loader/uefi/: Cargo.toml
loader/uefi/src/: firmware.rs  lib.rs
netstack/: Cargo.toml
netstack/src/: ethernet.rs  ip.rs  lib.rs  tcp.rs  tests.rs  tls.rs
runtime/: Cargo.toml
runtime/src/: alloc.rs  executor.rs  lib.rs  timers.rs
scripts/: build-bootfs.py  comprehensive_test.sh  package-uefi.sh  run-qemu.sh  setup-testing.sh  simple_test.sh  test.sh  vendor-loader-deps.sh
security/: Cargo.toml
security/src/: apikey.rs  keystore.rs  lib.rs
services/init/: Cargo.toml
services/init/bootfs/: README.md  init_service.rlib  logger.txt  services.manifest  system.toml  welcome.txt
services/init/src/: bootfs.rs  lib.rs
services/s3/: Cargo.toml
services/s3/src/: auth.rs  error.rs  handlers.rs  http.rs  lib.rs  log.rs  multipart.rs
storage/: Cargo.toml
storage/src/: block.rs  lib.rs  object.rs  version.rs
targets/: x86_64-rustcore.json  x86_64-rustcore.ld
