[workspace]
members = [
    "kernel",
    "ipc",
    "services/init",
]
default-members = ["kernel"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Rustcore Contributors"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
