[package]
name = "kernel"
edition = "2021"
version = "0.1.0"
authors = ["Rustcore Contributors"]

[dependencies]
bootproto = { path = "../bootproto" }
ipc = { path = "../ipc" }
services-init = { package = "init", path = "../services/init" }
heapless = "0.8"

[lib]
path = "src/lib.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "kernel"
path = "src/bin/kernel.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "enhanced_kernel"
path = "src/bin/enhanced_kernel.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "functional_test"
path = "src/bin/functional_test.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "memory_test"
path = "src/bin/memory_test.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "ipc_test"
path = "src/bin/ipc_test.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "functional_demo"
path = "src/bin/functional_demo.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "direct_functional_test"
path = "src/bin/direct_functional_test.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"
test = false
doctest = false
bench = false

[[test]]
name = "boot_smoke"
path = "tests/boot_smoke.rs"
harness = false
