[package]
name = "loader-uefi"
version = "0.1.0"
edition = "2021"
authors = ["Rustcore Contributors"]
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
firmware = ["uefi", "uefi-services", "log", "sha2"]

[dependencies]
bootproto = { path = "../../bootproto" }
log = { version = "0.4", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, features = ["compress"], optional = true }
uefi = { version = "0.27", default-features = false, features = ["alloc"], optional = true }
uefi-services = { version = "0.24", optional = true }
